# specialax

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  gegenbauer.py  noxfile.py  polylog.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
src/spexial/: __init__.py  _version.py
src/spexial/_src/: __init__.py  comb.py  gamma.py  gegenbauer.py  kn.py  polylog.py  spence.py  zeta.py
tests/regression/: test_gegenbauer.py  test_spence.py
tests/smoke/: test_package.py
